[package]
name = "hook_me"
description = "A discord bot and web api to handle webhooks from servers like github and Gitea, with the ability to manage who has permission to use it."
version = "1.0.0"
edition = "2021"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/SarahGreyWolf/HookMe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", default-features=false, features = ["rt-multi-thread", "sync", "macros"] }
axum = "0.5.1"
tower = "0.4.12"
serenity = {version="0.11"}
rand = "0.8.5"
yyid = "0.6.0"
bcrypt = "0.13.0"

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["tokio-runtime"]
